--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="header-left">
           <h1>Shop TIENTOBACCO</h1>
           <p>Thuốc lá & phụ kiện chính hãng</p>
-          <p>Ship quah khu vực Hà Nội - Hải Dương</p>
+          <p>Ship quanh khu vực Hà Nội - Hải Dương</p>
           <div class="facebook-link">
             <a
               href="https://www.facebook.com/tien.trinhhoang.9022"
