--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <header>
       <div class="header-container">
         <div class="logo-container">
-          <img src="img/anhthuocla.jpg.png" alt="logo" width="10%" />
+          <img src="https://github.com/tien1501-tien/thuocla-website/blob/main/.vscode/img/anhthuocla.jpg.png" alt="logo" width="10%" />
         </div>
         <div class="header-left">
           <h1>Shop TIENTOBACCO</h1>
